# GraphLook

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  llm.py  scheme.py
app/agent/: act.py  base.py  graphlook.py  planning.py  toolcall.py
app/prompt/: cot.py
app/rag/: all.txt  ollama_test.py  rag.py  test_Milvus.py  test_aigc_collection.py  test_bge.py  test_embedding.py  test_ollama_nomic.py  test_query.py
app/tools/: tool.py
app2/agent/: base.py
config/: default_config.toml
tests/: addtool.py  client.py
