[project]
name = "graphlook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "flagembedding>=1.3.4",
    "mcp[cli]>=1.5.0",
    "ollama>=0.4.7",
    "openai>=1.68.2",
    "pymilvus[model]>=2.5.6",
    "torch>=2.6.0",
]
